core/web/overlays/staging/patches/deployment.namespace.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: co-co-api
spec:
  template:
    spec:
      containers:
      - name: co-api
