core/web/overlays/staging/patches/ingress.staging.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: co-co-api
spec:
  rules:
  - host: api-staging.curious-outcomes.community
    http:
      paths:
      - backend:
          service:
            name: co-co-api
            port:
              number: 3000
        path: /api/?(.*)
        pathType: Prefix
